# python-module-template

./: .gitignore  .travis.yml  LICENSE.md  Makefile  cookiecutter.json  pyproject.toml  readme.md
.github/workflows/: package.yml  python-package.yml  release.yml
{{cookiecutter.github_repo}}/: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.github_repo}}/.github/workflows/: doc.yml  package.yml  python-package.yml  python-publish.yml  release.yml
{{cookiecutter.github_repo}}/docs/: changelog.md  code_of_conduct.md  contributing.md  index.md  license.md  reference.md
{{cookiecutter.github_repo}}/sphinx/: index.rst
{{cookiecutter.github_repo}}/tests/: test_dummy.py  test_version.py
{{cookiecutter.github_repo}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}/: .travis.yml  CHANGELOG.md  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/sphinx/: api.rst  conf.py
