[tool.poetry]
name = "python-module-template"
version = "1.2.2"
description = "A template for Python libraries."
authors = ["Jerome Guibert <jguibert@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
cookiecutter = "*"
#jinja2-time = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"