[project]
name = "python-module-template"
version = "2.0.0"
description = "A template for Python libraries."
authors = [{ name = "Jerome Guibert", email = "jguibert@gmail.com" }]
maintainers = [{ name = "Jerome Guibert", email = "jguibert@gmail.com" }]
readme = "readme.md"
license = {file = "LICENSE.md"}
keywords = []
classifiers = [
    # update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.9,<4"
dependencies = ["cookiecutter"]

[dependency-groups]
dev =  [
    "poethepoet >= 0.32.1",
    "setuptools>=42",
]
docs = [
    "mkdocs~= 1.6",
    "mkdocs-include-markdown-plugin >= 7.1.2",
    "mkdocstrings[python] ~= 0.27",
    "mkdocs-material == 9.*",
    "mkdocs-include-markdown-plugin ~= 7.1.2"
]

[tool.uv]
package = true
cache-dir = "./.cache"
default-groups = ["dev", "docs"]

[tool.poe.tasks.docs]
help = "Build site documentation"
shell = """
git fetch origin gh-pages &
uv run mkdocs build --clean
"""

[tool.poe.tasks.docs-publish]
help = "Publish site documentation"
cmd = """
uv run mkdocs gh-deploy  --clean 
"""

[tool.poe.tasks.requirements]
help = "Generate requirements.txt"
cmd = "uv pip compile pyproject.toml -o requirements.txt "
capture_stdout = "requirements.txt"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"